# group-todo

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  manage.py  pyproject.toml
backend/grouptodo/: asgi.py  routing.py  settings.py  urls.py
backend/grouptodo/todos/: apps.py  consumers.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/grouptodo/todos/migrations/: 0001_initial.py  0002_new_schema.py
backend/grouptodo/todos/templates/todos/: index.html
frontend/: Dockerfile  dev-proxy.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  store.ts
grouptodo/: asgi.py  urls.py  wsgi.py
grouptodo/todos/: admin.py  urls.py  views.py
nginx/: nginx.conf
